--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "recharts": "^3.6.0",
     "lucide-react": "^0.561.0",
     "react-dom": "^19.2.3",
-    "@capacitor/core": "^8.0.0"
+    "@capacitor/core": "^8.0.0",
+    "vite": "^7.3.0",
+    "@vitejs/plugin-react": "^5.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
